Add further feature engineering tools

--- a/features/categorial-data.ipynb
+++ b/features/categorial-data.ipynb
@@ -1,11 +1,304 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Feature Engineering with Categorial Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>CategoryA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CategoryB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CategoryC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CategoryD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id       Name\n",
+       "0   0  CategoryA\n",
+       "1   1  CategoryB\n",
+       "2   2  CategoryC\n",
+       "3   3  CategoryD"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "category_ids = list(range(4))\n",
+    "category_labels = ['CategoryA', 'CategoryB', 'CategoryC', 'CategoryD']\n",
+    "category_mapping = pd.DataFrame(list(zip(category_ids, category_labels)), columns=['Id', 'Name'])\n",
+    "category_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-02-01 22:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05 22:30:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-05-01 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-06-08 23:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0  1     2  3\n",
+       "0 2013-01-01 22:00:00  1  23.1  1\n",
+       "1 2013-02-01 22:15:00  1  12.2  0\n",
+       "2 2013-01-05 22:30:00  1  11.1  2\n",
+       "3 2013-05-01 23:00:00  1  10.4  2\n",
+       "4 2013-06-08 23:15:00  1  54.2  2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./data/time-data.csv\", delimiter=\";\", header=None)\n",
+    "df[0] = df[0].apply(pd.to_datetime)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>Category0</th>\n",
+       "      <th>Category1</th>\n",
+       "      <th>Category2</th>\n",
+       "      <th>Category3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-02-01 22:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05 22:30:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-05-01 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-06-08 23:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0  1     2  3  Category0  Category1  Category2  Category3\n",
+       "0 2013-01-01 22:00:00  1  23.1  1          0          1          0          0\n",
+       "1 2013-02-01 22:15:00  1  12.2  0          1          0          0          0\n",
+       "2 2013-01-05 22:30:00  1  11.1  2          0          0          1          0\n",
+       "3 2013-05-01 23:00:00  1  10.4  2          0          0          1          0\n",
+       "4 2013-06-08 23:15:00  1  54.2  2          0          0          1          0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OneHotEncoder for multiple categorial columns\n",
+    "# from sklearn.preprocessing import OneHotEncoder\n",
+    "# LabelBinarizer for binarizing one categorial column\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "# Encode category\n",
+    "lb = LabelBinarizer()\n",
+    "binarized_labels = lb.fit_transform(df[3])\n",
+    "df[[\"Category\" + str(i) for i in range(binarized_labels.shape[1])]] = binarized_labels\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
