--- a/features/time-data.ipynb
+++ b/features/time-data.ipynb
@@ -1,11 +1,598 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Feature Engineering with Time and Date data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parse dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-02-01 22:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05 22:30:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-05-01 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-06-08 23:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0  1     2  3\n",
+       "0 2013-01-01 22:00:00  1  23.1  1\n",
+       "1 2013-02-01 22:15:00  1  12.2  0\n",
+       "2 2013-01-05 22:30:00  1  11.1  2\n",
+       "3 2013-05-01 23:00:00  1  10.4  2\n",
+       "4 2013-06-08 23:15:00  1  54.2  2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"./data/time-data.csv\", delimiter=\";\", header=None)\n",
+    "df[0] = df[0].apply(pd.to_datetime)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert to Unix-time, DayOfWeek, Weekday, and DayOfMonth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year  week  day\n",
+       "0   2013     1    2\n",
+       "1   2013     5    5\n",
+       "2   2013     1    6\n",
+       "3   2013    18    3\n",
+       "4   2013    23    6\n",
+       "5   2013     1    2\n",
+       "6   2013    27    7\n",
+       "7   2013     1    3\n",
+       "8   2013     1    3\n",
+       "9   2013    10    4\n",
+       "10  2013     9    6\n",
+       "11  2013     1    3\n",
+       "12  2013     5    6\n",
+       "13  2013     1    3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0].dt.isocalendar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>UNIX</th>\n",
+       "      <th>DOW</th>\n",
+       "      <th>Monday</th>\n",
+       "      <th>Tuesday</th>\n",
+       "      <th>Wednesday</th>\n",
+       "      <th>WorkingDay</th>\n",
+       "      <th>DOM</th>\n",
+       "      <th>DOY</th>\n",
+       "      <th>WOY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1357077600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-02-01 22:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1359756900</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05 22:30:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1357425000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-05-01 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1367449200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>121</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-06-08 23:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1370733300</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0  1     2  3        UNIX  DOW  Monday  Tuesday  \\\n",
+       "0 2013-01-01 22:00:00  1  23.1  1  1357077600    1       0        1   \n",
+       "1 2013-02-01 22:15:00  1  12.2  0  1359756900    4       0        0   \n",
+       "2 2013-01-05 22:30:00  1  11.1  2  1357425000    5       0        0   \n",
+       "3 2013-05-01 23:00:00  1  10.4  2  1367449200    2       0        0   \n",
+       "4 2013-06-08 23:15:00  1  54.2  2  1370733300    5       0        0   \n",
+       "\n",
+       "   Wednesday  WorkingDay  DOM  DOY  WOY  \n",
+       "0          0           1    1    1    1  \n",
+       "1          0           1    1   32    5  \n",
+       "2          0           0    5    5    1  \n",
+       "3          1           1    1  121   18  \n",
+       "4          0           0    8  159   23  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"UNIX\"] = pd.to_numeric(df[0]) // 10**9  # In Seconds since 00:00 01/01/1970\n",
+    "\n",
+    "# Monday=0, Sunday=6, Ordinals however imply implicit order\n",
+    "df[\"DOW\"] = df[0].dt.dayofweek\n",
+    "# Better\n",
+    "df[\"Monday\"] = (df[\"DOW\"] == 0).astype(int)\n",
+    "df[\"Tuesday\"] = (df[\"DOW\"] == 1).astype(int)\n",
+    "df[\"Wednesday\"] = (df[\"DOW\"] == 2).astype(int)\n",
+    "# ...\n",
+    "\n",
+    "df[\"WorkingDay\"] = (df[\"DOW\"] < 5).astype(int)\n",
+    "df[\"DOM\"] = df[0].dt.day\n",
+    "df[\"DOY\"] = df[0].dt.dayofyear\n",
+    "df[\"WOY\"] = df[0].dt.isocalendar().week\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Feature-Crossing between DayOfWeek and DayOfMonth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>UNIX</th>\n",
+       "      <th>DOW</th>\n",
+       "      <th>Monday</th>\n",
+       "      <th>Tuesday</th>\n",
+       "      <th>Wednesday</th>\n",
+       "      <th>WorkingDay</th>\n",
+       "      <th>DOM</th>\n",
+       "      <th>DOY</th>\n",
+       "      <th>WOY</th>\n",
+       "      <th>DOWxDOM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1357077600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-02-01 22:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1359756900</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-05 22:30:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1357425000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-05-01 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1367449200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>121</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-06-08 23:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1370733300</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159</td>\n",
+       "      <td>23</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0  1     2  3        UNIX  DOW  Monday  Tuesday  \\\n",
+       "0 2013-01-01 22:00:00  1  23.1  1  1357077600    1       0        1   \n",
+       "1 2013-02-01 22:15:00  1  12.2  0  1359756900    4       0        0   \n",
+       "2 2013-01-05 22:30:00  1  11.1  2  1357425000    5       0        0   \n",
+       "3 2013-05-01 23:00:00  1  10.4  2  1367449200    2       0        0   \n",
+       "4 2013-06-08 23:15:00  1  54.2  2  1370733300    5       0        0   \n",
+       "\n",
+       "   Wednesday  WorkingDay  DOM  DOY  WOY  DOWxDOM  \n",
+       "0          0           1    1    1    1        1  \n",
+       "1          0           1    1   32    5        4  \n",
+       "2          0           0    5    5    1       25  \n",
+       "3          1           1    1  121   18        2  \n",
+       "4          0           0    8  159   23       40  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Feature crossing to exploit weekends at the end of a month\n",
+    "df[\"DOWxDOM\"] = df[\"DOW\"] * df[\"DOM\"]\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
